# flowman

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  AUTHORS  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  INSTALLING.md  Jenkinsfile  NOTICE  QUICKSTART.md  README.md  RELEASING.md  SECURITY.md  build-release.sh  pom.xml
docs/: .gitignore  Makefile  _config.yml  building.md  concepts.md  conf.py  config.md  environment.yaml  index.md  index.rst  installation.md  introduction.md  lifecycle.md  make.bat  pyproject.toml  quickstart.md  releases.md  requirements.txt  spelling.txt  style.py  workflow.md
docs/_static/: flowman.css  flowman.js
docs/cli/: flowexec.md  flowserver.md  flowshell.md  history-server.md  index.md  schema.md
docs/concepts/: concepts.md  entities.md  index.md  lifecycle.md  metrics.md  migrations.md
docs/connectors/: index.md
docs/cookbook/: advanced-jdbc.md  data-qualioty.md  data-quality.md  data-validation.md  docker.md  execution-phases.md  hadoop-dependencies.md  impala.md  index.md  kerberos.md  metrics.md  migrations.md  override-jars.md  parallel-execution.md  performance.md  secrets.md  sharing.md  syntax-highlighting.md  target-ordering.md  testing.md  validation.md  windows.md
docs/documenting/: checks.md  config.md  index.md  mappings.md  relations.md  targets.md  tests.md
docs/faq/: index.md
docs/history-server/: index.md
docs/plugins/: avro.md  aws.md  azure.md  delta.md  impala.md  index.md  json.md  kafka.md  mariadb.md  mssql.md  mssqlserver.md  mysql.md  openapi.md  oracle.md  (+4 more)
(+3012 files in other folders)
