[tool.poetry]
name = "flowman-docs"
version = "1.0.0"
description = "Documentation of Flowman"
authors = ["The Flowman Authors <info@flowman.io>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
furo = "^2023.5.20"
myst-parser = "^1.0.0"
python = "^3.10"
recommonmark = "^0.7.1"
Sphinx = "^6.2.1"
sphinx-markdown-tables = "^0.0.17"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry2conda]
name = "flowman-docs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
